# pow-miner-sdk

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: main.yml
clients/core/: README.md  package.json  tsconfig.json  tsup.config.ts
clients/core/src/: findHash.ts  findHashMultithreaded.ts  findHashOptimized.ts  hashWorker.ts  index.ts
clients/js/: package.json
clients/js/src/: index.ts
clients/miner/: .prettierrc.json  package.json  tsconfig.json  tsup.config.ts
clients/miner/src/: miner.ts  utils.ts
clients/miner/src/scripts/: automine.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
clients/umi/: package.json  pnpm-lock.yaml
clients/umi/src/: index.ts
clients/useraccount/js/: package.json  pnpm-lock.yaml
clients/useraccount/js/test/: _setup.ts  initializeConfig.test.ts
clients/useraccount/rust/: Cargo.toml  README.md
clients/useraccount/rust/src/: lib.rs
clients/useraccount/umi/: package.json
clients/wasm/: package.json
clients/wasm/src/: Cargo.toml  lib.rs
idls/: pow_miner.json  useraccount.json
scripts/: generate-clients.mjs  generate-useraccount-clients.mjs  start-validator.mjs
scripts/client/: publish-js.mjs  publish-umi.mjs  sync-versions.mjs
